--- a/style.css
+++ b/style.css
@@ -10721,7 +10721,7 @@ body #main .number10 {
 
 @keyframes move {
   0% {
-    transform: translateX(0) translateY(0) rotate(0);
+    transform: translateX(-40%) translateY(-12%) rotate(0);
   }
   30% {
     transform: translateX(150%) translateY(0) rotate(120deg);
@@ -10733,7 +10733,102 @@ body #main .number10 {
     transform: translateX(0) translateY(80%) rotate(250deg);
   }
   100% {
-    transform: translateX(0) translateY(0) rotate(0);
+    transform: translateX(-40%) translateY(-12%) rotate(0);
+  }
+}
+@media screen and (max-width: 1100px) {
+  body {
+    overflow: hidden;
+    position: relative;
+    margin: 0;
+    padding: 0;
+    background-color: #16092e;
+    font-family: "RocknRoll One", sans-serif;
+    font-weight: 700;
+  }
+  body .fond {
+    border-radius: 71% 29% 74% 26%/24% 82% 18% 76%;
+    height: 60vh;
+    width: 50vw;
+    background: linear-gradient(#372061, #16092e);
+    position: absolute;
+    z-index: -5;
+    animation: move 20s ease infinite;
+  }
+  body header {
+    color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    border-bottom: solid 1px rgba(245, 245, 245, 0.281);
+    width: 80%;
+    margin: auto;
+  }
+  body header h1, body header .h1 {
+    margin-left: 40px;
+  }
+  body header .svg {
+    width: 150px;
+  }
+  body header .svg img {
+    width: 100%;
+  }
+  body #main .border1 {
+    border: solid 5px black;
+  }
+  body #main .border2 {
+    border: dotted 5px black;
+  }
+  body #main .border3 {
+    border: solid 1px black;
+  }
+  body #main .top2 {
+    border-top: red 2px solid;
+  }
+  body #main .top3 {
+    border-top: red 5px solid;
+  }
+  body #main #square {
+    margin-top: 40PX;
+    height: 200px;
+    width: 100%;
+    border: solid white 1px;
+  }
+  body #main input {
+    width: 70px;
+    margin: 6px 0;
+  }
+  body #main .number1 {
+    border: 5px solid black;
+  }
+  body #main .number2 {
+    border-top: 5px solid black;
+  }
+  body #main .number3 {
+    border-right: 5px solid black;
+  }
+  body #main .number4 {
+    border-bottom: 5px solid black;
+  }
+  body #main .number5 {
+    border-left: 5px solid black;
+  }
+  body #main .number6 {
+    border-radius: 8px;
+  }
+  body #main .number7 {
+    border-top-left-radius: 8px;
+  }
+  body #main .number8 {
+    border-top-right-radius: 8px;
+  }
+  body #main .number9 {
+    border-bottom-right-radius: 8px;
+  }
+  body #main .number10 {
+    border-bottom-left-radius: 8px;
   }
 }
 
