--- a/style.scss
+++ b/style.scss
@@ -38,14 +38,14 @@ body{
     }
     #main{
         .border1{
-            border: solid 5px black;
+            border: solid 5px rgb(108, 66, 185);
         }
 
         .border2{
-            border: dotted 5px black;
+            border: dotted 5px rgb(108, 66, 185);
         }
         .border3{
-            border: solid 1px black;
+            border: solid 1px rgb(108, 66, 185);
         }
         .top2{
             border-top: red 2px solid;
@@ -63,19 +63,19 @@ body{
             margin: 6px 0;
         }
         .number1{
-            border: 5px solid black;
+            border: 5px solid rgb(108, 66, 185);
         }
         .number2{
-            border-top: 5px solid black;
+            border-top: 5px solid rgb(108, 66, 185);
         }
         .number3{
-            border-right: 5px solid black;
+            border-right: 5px solid rgb(108, 66, 185);
         }
         .number4{
-            border-bottom: 5px solid black;
+            border-bottom: 5px solid rgb(108, 66, 185);
         }
         .number5{
-            border-left: 5px solid black;
+            border-left: 5px solid rgb(108, 66, 185);
         }
         .number6{
             border-radius: 8px;
@@ -143,14 +143,14 @@ body{
         }
         #main{
             .border1{
-                border: solid 5px black;
+                border: solid 5px rgb(108, 66, 185);
             }
     
             .border2{
-                border: dotted 5px black;
+                border: dotted 5px rgb(108, 66, 185);
             }
             .border3{
-                border: solid 1px black;
+                border: solid 1px rgb(108, 66, 185);
             }
             .top2{
                 border-top: red 2px solid;
@@ -169,19 +169,19 @@ body{
                 margin: 6px 0;
             }
             .number1{
-                border: 5px solid black;
+                border: 5px solid rgb(108, 66, 185);
             }
             .number2{
-                border-top: 5px solid black;
+                border-top: 5px solid rgb(108, 66, 185);
             }
             .number3{
-                border-right: 5px solid black;
+                border-right: 5px solid rgb(108, 66, 185);
             }
             .number4{
-                border-bottom: 5px solid black;
+                border-bottom: 5px solid rgb(108, 66, 185);
             }
             .number5{
-                border-left: 5px solid black;
+                border-left: 5px solid rgb(108, 66, 185);
             }
             .number6{
                 border-radius: 8px;
